・Gフードバナー追加 ・Gフードページ追加 ・scss細分化途中

--- a/public/index.html
+++ b/public/index.html
@@ -27,17 +27,23 @@
 		<!---- 3.メインコンテンツ ---->
 		<div class="mainContents">
 			<div class="mainContents--inner">
-				<!---- 3-1.トップタイトル ---->
+		<!---- 3-1.トップタイトル ---->
 				<section class="topTitle">
 					<div class="topTitle--main imgSP">
 						<h2>ゴジラの誕生日をお祝いするイベント</h2>
 						<h3>「ゴジラ•フェス2020 オンライン」<br><span>オンライン配信にて開催!!</span></h3>
 					</div>
+		<!---- gfood / バナー画像 ---->
+					<div class="gfood_banner">
+						<a href="gfood.html" target="_blank">
+							<img src="./img/gfood_banner.png" class="banner-img mg-b" alt="今年もあります！Gフードラインナップ">
+						</a>
+					</div>
 					<div class="topTitle--sub">
 						<p>ゴジラファン必見!<br class="sp-br">注目コンテンツを配信予定!!</p>
 					</div>
 				</section>
-				<!---- 3-2.総合司会決定 ---->
+		<!---- 3-2.総合司会決定 ---->
 				<section class="newsBox">
 					<img src="img/PC/pc_boxHeader1.png" class="imgPC" alt="総合司会決定!!">
 					<img src="img/SP/sp_boxHeader1.png" class="imgSP" alt="総合司会決定!!">
@@ -56,7 +62,7 @@
 						</div>
 					</div>
 				</section>
-				<!---- 3-3.メインステージチャンネル ---->
+		<!---- 3-3.メインステージチャンネル ---->
 				<section class="infoBox">
 					<img src="img/PC/pc_boxHeader2.png" class="imgPC" alt="メインステージチャンネル">
 					<img src="img/SP/sp_boxHeader2.png" class="imgSP" alt="メインステージチャンネル">
@@ -65,7 +71,7 @@
 							<h3>メインステージチャンネルで<br class="sp-br">配信予定コンテンツはこれだ!!</h3>
 						</div>
 					</div>
-					<!-- // オープニングイベント -->
+		<!-- // オープニングイベント -->
 					<div class="infoBox-s">
 						<div class="infoBox-s--inner">
 							<div class="infoBoxs-label">
@@ -124,15 +130,15 @@
 								<p class="pc-s-font">11月に大阪•心斎橋にてオープンする「ゴジラ•ストア　Osaka」。今回オープンに合わせてメインビジュアルを描き下ろして頂いたイラストレーターの中村佑介氏を迎え、メインビジュアルに込められた思いなどをお伺います。ゴジラ•ストア　Osaka限定商品の最新情報もお届け!</p>
 							</div>
 						</div>
-						<!---- // チケット詳細 ---->
+			<!---- // チケット詳細 ---->
 						<div class="ticketBox">
 							<div class="ticketBox--title">
 								<h3>チケット販売はこちら!!</h3>
 							</div>
 							<div class="ticketBox--main display-f">
-								<div class="ticketBox-btn">
+								<div class="ticket-banner">
 									<a href="#">
-										<img src="img/SP/sp_banner.png" alt="オンライン・エンタテインメント・プラットフォームはこちら">
+										<img src="img/SP/sp_banner.png" class="banner-img" alt="オンライン・エンタテインメント・プラットフォームはこちら">
 									</a>
 								</div>
 								<div class="ticketBox-text">
@@ -155,7 +161,7 @@
 						</div>
 					</div>
 				</section>
-				<!---- 3-4.ゴジラ・ストアTV ---->
+		<!---- 3-4.ゴジラ・ストアTV ---->
 				<section class="newsBox">
 					<img src="img/PC/pc_boxHeader3.png" class="imgPC" alt="ゴジラ・ストアTV">
 					<img src="img/SP/sp_boxHeader3.png" class="imgSP" alt="ゴジラ・ストアTV">
@@ -174,7 +180,7 @@
 						</div>
 					</div>
 				</section>
-				<!---- 3-5.酒井ゆうじ造形LIVE ---->
+		<!---- 3-5.酒井ゆうじ造形LIVE ---->
 				<section class="newsBox">
 					<img src="img/PC/pc_boxHeader4.png" class="imgPC" alt="酒井ゆうじ造形LIVE">
 					<img src="img/SP/sp_boxHeader4.png" class="imgSP" alt="酒井ゆうじ造形LIVE">
@@ -193,7 +199,7 @@
 						</div>
 					</div>
 				</section>
-				<!---- 3-6.「居酒屋ゴジラ」グッズで一緒に乾杯しよう! ---->
+		<!---- 3-6.「居酒屋ゴジラ」グッズで一緒に乾杯しよう! ---->
 				<section class="newsBox">
 					<img src="img/PC/pc_boxHeader5.png" class="imgPC" alt="酒井ゆうじ造形LIVE">
 					<img src="img/SP/sp_boxHeader5.png" class="imgSP" alt="酒井ゆうじ造形LIVE">
@@ -301,9 +307,11 @@
 				<p class="footer--text__top">詳細は後日発表いたします。</p>
 				<p class="footer--text__bottom">情報アップデート予定!</p>
 			</div>
-			<a href="https://godzilla.store/shop/default.aspx">
-				<img src="img/Ggs01.png" alt="ゴジラ・ストアはこちら">
-			</a>
+			<div class="gstore-banner">
+				<a href="https://godzilla.store/shop/default.aspx">
+					<img src="img/Ggs01.png" class="banner-img" alt="ゴジラ・ストアはこちら">
+				</a>
+			</div>
 			<small>TM&amp;&copy;TOHO CO., LTD.</small>
 		</footer>
 	</body>
